# libvmod-scaleable

./: CHANGES.rst  README.rst  configure.ac
src/: Makefile.am  vmod_scale.c  vmod_scale.vcc
src/tests/: test01.vtc
